--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jspdf": "^2.5.2",
     "next": "16.0.7",
     "papaparse": "^5.4.1",
+    "pdf-lib": "^1.17.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^2.10.3",
