--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^2.10.3",
+    "server-only": "^0.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
