--- a/package.json
+++ b/package.json
@@ -9,21 +9,31 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.561.0",
+    "mongoose": "^9.0.1",
     "next": "16.0.7",
+    "next-auth": "^5.0.0-beta.30",
     "papaparse": "^5.4.1",
     "pdf-lib": "^1.17.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.68.0",
+    "react-to-print": "^3.2.0",
     "recharts": "^2.10.3",
     "server-only": "^0.0.1",
-    "uuid": "^9.0.0"
+    "tailwind-merge": "^3.4.0",
+    "uuid": "^9.0.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "babel-plugin-react-compiler": "1.0.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4"
